--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -792,6 +792,9 @@
     width: 395px;
     gap: 7px;
 }
+.inp_group.tel.min {
+    width: 100%;
+}
 .inp_group.tel .sel_box {
     width: calc(33.33% - 5px);
 }
@@ -983,6 +986,7 @@
     border-right: 1px solid #e6e6e6;
     border-bottom: 1px solid #e6e6e6;
     background-color: #f9fafa;
+    vertical-align: middle;
 }
 .tbl_box_data table tr.bg th,
 .tbl_box_data table tr.bg td {
@@ -1082,6 +1086,11 @@
     width: 200px;
     padding: 0 33px;
     box-sizing: border-box;
+}
+.tbl_box_list ul li a .employment_status .cont {
+    font-size: 45px;
+    font-weight: 600;
+    color: #b4b3b3;
 }
 .tbl_box_list ul li a .employment_status .dday {
     font-size: 45px;
@@ -1215,6 +1224,15 @@
 .tbl_box_detail .tit .right .info li + li::before {
     content: "ㅣ";
     margin-right: 10px;
+}
+.tbl_box_detail.type_02 table tr th,
+.tbl_box_detail.type_02 table tr td {
+    padding: 15px;
+    border-right: 1px solid #e2e2e2;
+}
+.tbl_box_detail.type_02 table tr th:last-child,
+.tbl_box_detail.type_02 table tr td:last-child {
+    border-right: none;
 }
 
 /* 공통게시판 타입  */
@@ -2647,6 +2665,7 @@ a.ui-button:active,
 
     /* list 리스트 */
     .content_list_box dl {
+        gap: 15px;
         padding: 0 15px;
         font-size: 15px;
     }
@@ -2942,6 +2961,24 @@ a.ui-button:active,
         font-size: 14px;
     }
     
+    .tbl_box_detail.type_02 table colgroup col {
+        display: flex;
+        width: 100%;
+    }
+    .tbl_box_detail.type_02 table tr {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    .tbl_box_detail.type_02 table tr th {
+        background-color: #f9fafa;
+    }
+    .tbl_box_detail.type_02 table tr th,
+    .tbl_box_detail.type_02 table tr td {
+        width: 100%;
+        border-right: none;
+    }
+    
     /* 테이블 등록/수정 */
     .tbl_box_add table tr td {
         line-height: 1;
@@ -3122,7 +3159,8 @@ a.ui-button:active,
         padding: 10px 0;
         background-color: #f5f5f5;
     }
-    .tbl_box_list ul li a .employment_status .dday {
+    .tbl_box_list ul li a .employment_status .dday,
+    .tbl_box_list ul li a .employment_status .cont {
         font-size: 30px;
     }
     .tbl_box_list ul li a .employment_status .date {
