--- a/portal/css/style.css
+++ b/portal/css/style.css
@@ -797,6 +797,209 @@ header.headerfix .header_bottom ul li a::before {
     font-weight: 500;
 }
 
+/* 통합공시 */
+.integrated_box .img {
+    padding: 20px 0;
+    border-top: 1px solid #e8e7e7;
+    border-bottom: 1px solid #e8e7e7;
+    box-sizing: border-box;
+}
+.integrated_box .txt_box {
+    margin-top: 50px;
+}
+.integrated_box .txt_box dt {
+    margin-bottom: 10px;
+    font-size: 22px;
+    font-weight: 500;
+    color: #283593;
+}
+.integrated_box .txt_box dd {
+    line-height: 25px;
+    font-size: 15px;
+}
+.integrated_box .txt_box dd .btn_box {
+    width: auto;
+    flex: none;
+    justify-content: flex-end;
+    margin-top: 10px;
+}
+.integrated_box .txt_box dd .btn_box * {
+    width: auto;
+    flex: none;
+    padding: 10px 20px;
+}
+.integrated_box .integrated_item {
+    margin-top: 50px;
+}
+.integrated_box .integrated_item .txt {
+    padding-left: 20px;
+}
+.integrated_count {
+    display: flex;
+    gap: 30px;
+    margin-top: 30px;
+}
+.integrated_count dl {
+    display: flex;
+    flex-direction: column;
+    width: calc(50% - 15px);
+}
+.integrated_count dl dt {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 10px;
+}
+.integrated_count dl dt strong {
+    font-size: 17px;
+    font-weight: 500;
+}
+.integrated_count dl dt span {
+    font-size: 14px;
+}
+.integrated_item .tit_box.row {
+    align-items: baseline;
+    margin-bottom: 35px;
+}
+.integrated_item .tit_box.row h4 {
+    margin-bottom: 0;
+}
+.integrated_item .tit_box.row span {
+    font-size: 14px;
+}
+.disclosure_box .btn_list {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.disclosure_box .btn_list > div {
+    display: flex;
+    gap: 10px;
+}
+.disclosure_box .btn_list button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 165px;
+    padding: 20px;
+    box-sizing: border-box;
+    background-color: #fff;
+    border: 2px solid #8aa7ff;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.disclosure_box .btn_list button.on {
+    background-color: #3949ab;
+    border-color: #3949ab;
+}
+.disclosure_box .btn_list button strong {
+    font-size: 15px;
+    font-weight: 500;
+}
+.disclosure_box .btn_list button.on strong {
+    color: #fff;
+}
+.disclosure_box .btn_list button span {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 22px;
+    font-weight: 500;
+    color: #3949ab;
+}
+.disclosure_box .btn_list button.on span {
+    color: #fff;
+}
+.disclosure_box .btn_list button span::before {
+    content: "";
+    display: block;
+    width: 13px;
+    height: 2px;
+    background-color: #3949ab;
+    margin: 9px 0 5px;
+}
+.disclosure_box .btn_list button.on span::before {
+    background-color: #fff;
+}
+
+/* 법령 */
+.ico_list {
+    display: flex;
+    gap: 10px;
+}
+.ico_list a {
+    display: flex;
+    justify-content: space-between;
+    min-width: 75px;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #fff;
+}
+a.ico_folder {
+    display: flex;
+    align-items: center;
+    min-height: 15px;
+}
+a.ico_folder::after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 15px;
+    background: url(../images/ico/ico_folder.png) no-repeat center;
+    margin-left: 10px;
+}
+.ico_list a.black {
+    background-color: #758899;
+}
+.ico_list a.skyblue {
+    background-color: #00b8d4;
+}
+.ico_list a.green {
+    background-color: #7cb342;
+}
+.ico_list a.blue {
+    background-color: #039be5;
+}
+.ico_list a.orange {
+    background-color: #ffab00;
+}
+
+/* 벤처투자마트 */
+.btn_mart_notice {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 30px;
+}
+.btn_mart_notice .btn_box_group {
+    justify-content: center;
+    gap: 30px;
+}
+.btn_mart_notice .btn_box_group .btn_box {
+    flex: none;
+    width: 280px;
+}
+.btn_mart_notice .btn_box_group .btn_box * {
+    padding: 20px 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+.btn_mart_notice .notice_box {
+    padding: 20px 0;
+    margin-top: 30px;
+    box-sizing: border-box;
+    width: 595px;
+    border: 3px solid #103ab3;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 500;
+    color: #273377;
+}
+
 /* 벤처투자상담 */
 .answer_box {
     display: flex;
@@ -1917,6 +2120,12 @@ header.headerfix .header_bottom ul li a::before {
 
 /* 아이디찾기/비밀번호찾기 */
 .find_group {}
+.find_txt {
+    margin-bottom: 40px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 20px;
+}
 .find_content {
     display: flex;
     gap: 15px;
@@ -1955,49 +2164,15 @@ header.headerfix .header_bottom ul li a::before {
     align-items: center;
 }
 .find_result_box {
-    display: none;
-    position: relative;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 65px;
-    padding: 60px 0;
-    box-sizing: border-box;
+    padding: 30px;
+    background-color: #f9fafa;
     border: 1px solid #d9e1e7;
-    box-shadow: 0px 2px 7px 0px rgb(0 0 0 / 11%);
-    background-color: #f6f7f9;
+    border-radius: 10px;
+    text-align: center;
 }
-.find_group.on .find_result_box {
-    display: flex;
-}
-.find_result_box::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: -17px;
-    left: 50%;
-    width: 30px;
-    height: 30px;
-    margin-left: -15px;
-    background-color: #f6f7f9;
-    border: 1px solid #d9e1e7;
-    border-width: 1px 0 0 1px;
-    transform: rotate(45deg);
-}
-.find_result_box > ul {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-.find_result_box > ul li {
-    font-size: 15px;
-    font-weight: 400;
-}
-.find_result_box > ul li strong {
-    font-size: 17px;
-    font-weight: 700;
-}
-.find_result_box .btn_box_group {
-    margin-top: 40px;
+.find_result_box li strong {
+    font-size: 19px;
+    font-weight: 500;
 }
 
 /* 마이페이지 메인 */
@@ -2734,6 +2909,16 @@ footer .footer_bottom {
 .alpop_box + .ui-dialog-buttonpane button {
     background-image: url(../images/ico/ico_alpop_close.png);
 }
+/* 비밀번호 찾기 팝업 */
+.ui-dialog .find_group .inp_group {
+    width: 50%;
+    margin: 0 auto;
+}
+.find_password_txt {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 15px;
+}
 /* 더보기 내용전체보기 */
 .ui-dialog .note_dialog.more {
     width: 500px !important;
@@ -2744,7 +2929,42 @@ footer .footer_bottom {
 .ui-widget button {
     font-family: 'scoredream', sans-serif;
 }
-
+/* 토스트 메세지 */
+.toast_box {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+    opacity: 0;
+}
+.toast_box.on {
+    display: flex;
+    animation: toast_show 1.6s ease-in-out forwards;
+}
+@keyframes toast_show {
+    0% {opacity: 0;}
+    17% {opacity: 1;}
+    83% {opacity: 1;}
+    100% {opacity: 0;}
+}
+.toast_box .txt {
+    display: flex;
+    position: relative;
+    padding: 20px 40px;
+    align-items: center;
+    justify-content: center;
+    min-width: 470px;
+    min-height: 70px;
+    background: rgba(0, 0, 0, .8);
+    border-radius: 8px;
+    font-size: 16px;
+    color: #fff;
+}
 /* ============================================================
     미디어쿼리 max-width: 1600px
 ============================================================ */
@@ -3228,6 +3448,61 @@ footer .footer_bottom {
         padding: 15px;
     }
 
+    /* 통합공시 */
+    .integrated_box .img {
+        width: 100%;
+        overflow: auto;
+    }
+    .integrated_count {
+        flex-direction: column;
+    }
+    .integrated_count dl {
+        width: 100%;
+    }
+    .disclosure_box .btn_list {
+        flex-wrap: wrap;
+        gap: 5px;
+    }
+    .disclosure_box .btn_list > div {
+        width: 100%;
+    }
+    .disclosure_box .btn_list button {
+        flex: 1;
+        width: auto;
+        padding: 10px;
+    }
+    .disclosure_box .btn_list button span {
+        font-size: 17px;
+    }
+
+    /* 법령 */
+    .ico_list {
+        flex-wrap: wrap;
+    }
+    .ico_list a {
+        min-width: auto;
+    }
+
+    /* 벤처투자마트 */
+    .btn_mart_notice .btn_box_group {
+        flex-direction: column;
+        width: 100%;
+        gap: 15px;
+    }
+    .btn_mart_notice .btn_box_group .btn_box {
+        width: 100%;
+    }
+    .btn_mart_notice .btn_box_group .btn_box * {
+        padding: 10px 0;
+        font-size: 16px;
+    }
+    .btn_mart_notice .notice_box {
+        width: 100%;
+        padding: 10px 0;
+        margin-top: 15px;
+        font-size: 16px;
+    }
+
     /* 용어사전 */
     .dictionary_box {
         padding: 0;
@@ -3699,6 +3974,29 @@ footer .footer_bottom {
     }
     .ui-dialog .note_dialog.more {
         width: 100% !important;
+    }
+    /* 비밀번호 찾기 팝업 */
+    .ui-dialog .find_txt {
+        font-size: 18px; 
+    }
+    .ui-dialog .find_group .inp_group {
+        width: 100%;
+    }
+    /* 토스트 팝업 */
+    .toast_box {
+        top: inherit;
+        left: 50%;
+        right: inherit;
+        bottom: 20%;
+        width: 100%;
+        transform: translateX(-50%);
+    }
+    .toast_box .txt {
+        min-width: 0;
+        min-height: 0;
+        padding: 15px 30px;
+        border-radius: 30px;
+        font-size: 15px;
     }
 
     /* footer */
